# examuq

./: .gitignore  EXAMUQ_PLAN.md  SESSION_HANDOFF_PROMPT.md
.github/workflows/: client-build.yml  client-tauri-build-beta.yml  client-tauri-build.yml
admin/app/Models/: AuditLog.php  Exam.php  ExamSession.php  LaunchToken.php  SessionEvent.php  User.php
admin/bootstrap/: app.php
admin/database/migrations/: 0001_01_01_000000_create_users_table.php  2026_04_09_042320_create_exams_table.php  2026_04_09_042321_create_exam_sessions_table.php  2026_04_09_042322_create_session_events_table.php  2026_04_09_042323_create_launch_tokens_table.php  2026_04_09_042324_create_audit_logs_table.php  2026_04_12_120000_optimize_exam_session_indexes_for_hosting_mode.php
admin/routes/: api.php  web.php
admin/tests/Feature/: ExamTokenGenerationTest.php  ExampleTest.php
client/: README.md  main.js  package-lock.json  package.json  preload.js
client-tauri/: README.md  package-lock.json  package.json
client-tauri/src/: exam-overlay.html  index.html  main.js  styles.css
client-tauri/src-tauri/: .gitignore  Cargo.toml  Info.plist  build.rs  tauri.conf.json
client-tauri/src-tauri/bundle/macos/: FIX_MACOS.command  README_MACOS.txt  jalankan.command
client-tauri/src-tauri/capabilities/: default.json
client-tauri/src-tauri/icons/: icon.icns
client-tauri/src-tauri/src/: lib.rs  main.rs
client/renderer/: app.js  index.html  styles.css
download/: examuq-0.1.6-macos.dmg
extension/: background.js  content.js  manifest.json  popup.css  popup.html  popup.js
(+25 files in other folders)
